src/less/main.less
@import url(https://fonts.googleapis.com/css?family=Open+Sans);
html{
  background-color: #fafafa;
}
body{
  font-family: "Open Sans", Arial;
  color: #555;
  font-size: 16px;
  margin: 2em auto;
  max-width: 800px;
  padding: 1em;
  line-height: 1.4;
  text-align: justify;
}

a,a:visited{
  color: #2980b9;
}

span.wr{
  color: #c0392b;
  font-weight: 600;
  text-decoration: underline;
}

span.colored{

}

span.sb{
  cursor: not-allowed;
  color: #0000EE;
}

span.sv{
  cursor: not-allowed;
  color: #551A8B;
}

span.foufoufou{
  &::before{
    content: "";
    display: inline-block;
    width: 1em;
    height: 1em;
    margin-left: 0.2em;
    margin-right: 0.2em;
    background-color: #444;
  }
  color: #444;
  font-weight: bold;
}

span.fivfivfiv{
  &::before{
    content: "";
    display: inline-block;
    width: 1em;
    height: 1em;
    margin-left: 0.2em;
    margin-right: 0.2em;
    background-color: #555;
  }
  color: #555;
  font-weight: bold;
}

span.mfw{
  color: #16a085;
}

span.citneed{
  vertical-align: top;
  font-size: 0.7em;
  padding-left: 0.3em;
}

small{
  font-size: 0.4em;
}

p.st{
  margin-top: -1em;
}

div.fancyPositioning{

  div.picture-left{
    float: left;
    width: 40%;
    overflow: hidden;
    margin-right: 1em;

    img{
      width: 100%;
    }

    p.caption{
      font-size: 0.7em;
    }
  }

  div.tleft{
    float: left;
    width: 55%;
    p:first-child{
      margin-top: 0;
    }
  }
  &::after{
    display: block;
    content: "";
    clear: both;
  }
}

ul{
  li{
    img{
      height: 1em;
    }
  }
}

blockquote{
  color: #777;
  margin-left: 0;
  margin-top: 2em;
  margin-bottom: 2em;
  span{
    float: left;
    margin-left: 1rem;
    padding-top: 1rem;
  }

  author{
    display: block;
    clear: both;
    font-size: 0.6em;
    margin-left: 2.4rem;
    font-style: oblique;

    &:before{
      content: "- ";
      margin-right: 1em;
    }
  }

  &::before{
    font-family: "Times New Roman", Times, Arial;
    color: #666;
    content: open-quote;
    font-size: 2.2em;
    font-weight: 600;
    float: left;
    margin-top: 0em;
    margin-right: 0.2rem;
    width: 1.2rem;
  }

  &::after{
    content: "";
    display: block;
    clear: both;
  }
}

@media screen and (max-width: 500px) {
  div.fancyPositioning{
    div.picture-left{
      float: none;
      width: inherit;
    }

    div.tleft{
      float: none;
      width: inherit;
    }
  }

  blockquote{
    span{
      width: 80%;
    }
    author{
      padding-top: 1em;
      width: 80%;
      margin-left: 15%;
      &::before{
        content: "";
        margin-right: inherit;
      }
    }
  }
}

